1.9.47
------


1.9.46
------
(RB=233744)
Disable data object checking on safe and performance-critical situations.

(RB=235277)
Added compatibility checking to annotations. Annotation changes will now be considered compatible rather than
simply skipped over and thus considered equivalent.

(RB=235831)
Add functionality of listening to all children's data under a certain znode in ZooKeeper.

1.9.45
------
(RB=233764)
Add permissive option to degrade on serializing bad user data

1.9.44
------
(RB=232974)
Adding perf test for Record Template put performance.

(RB=231054)
Make skipping publishRestliIdl task more precise by taking advantage to changes to CompatibilityInfoMap.
PublishRestliIdl should now be skipped if there are only model changes.

(RB=229233)
Add support for deprecated annotation.

1.9.43
------
(RB=231737)
Only validate union data if map has a single entry

1.9.42
------
(RB=226303)
Add @TestMethod annotation to indicate which methods on a resource are intended to only be used for testing.

(RB=224402)
Add compatibility checking between snapshot and idl.

(RB=228981)
Fixing the onlyIf closure for Publish tasks, adding more logging to ease debugging for future.

(RB=230533)
Fix bug that schema compatibility checking throws exception of "java.util.MissingFormatArgumentException: Format specifier 's'".

(RB=230897)
Support per-sourceSet pegasus/snapshot/idl override properties.

(RB=230550)
Fix missing doc field in generated snapshot/idl files, which is caused by multi-threaded generation.

1.9.41
------
(RB=225308)
Refactor r2 asyncpool stats to make it visible outside the package.

1.9.40
------
(RB=226611)
Fix a bug where SimpleLoadBalancerState didn't remove an old entry in cluster -> services
mapping when SimpleLoadBalancerState receive a service changes notifications from Zookeeper.
At the same time we are adding more JMX handle to load balancers to allow more control at runtime.

(RB=225607)
Fix two bugs related to snapshots: