@@ -379,6 +379,12 @@ public final class DataMap extends CheckedMap<String,Object> implements DataComp
     }
   }
 
+  @Override
+  public int dataComplexHashCode()
+  {
+    return _dataComplexHashCode;
+  }
+
   // Unit test use only
   void disableChecker()
   {
@@ -416,4 +422,5 @@ public final class DataMap extends CheckedMap<String,Object> implements DataComp
   private boolean _madeReadOnly = false;
   private boolean _instrumented = false;
   private Map<String, Integer> _accessMap;
+  private int _dataComplexHashCode = DataComplexHashCode.nextHashCode();
 }
